--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   },
   "homepage": "https://github.com/OPelham/fastify_catalogue#readme",
   "dependencies": {
-    "fastify": "^4.0.0",
-    "fastify-plugin": "^3.0.0",
     "@fastify/autoload": "^5.0.0",
+    "@fastify/mongodb": "^6.0.1",
     "@fastify/sensible": "^4.1.0",
-    "fastify-cli": "^4.2.0"
+    "fastify": "^4.0.0",
+    "fastify-cli": "^4.2.0",
+    "fastify-plugin": "^3.0.1",
+    "mongoose": "^6.4.1"
   },
   "devDependencies": {
     "tap": "^16.1.0"
