--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@fastify/mongodb": "^6.0.1",
     "@fastify/sensible": "^4.1.0",
     "fastify": "^4.0.0",
+    "fastify-auth": "^1.2.0",
     "fastify-cli": "^4.2.0",
     "fastify-plugin": "^3.0.1",
+    "fastify-swagger": "^5.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.1"
   },
   "devDependencies": {
